--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,14 @@
 <h1>Word Count</h1>
 <form action="result">
   <div class="form-group">
-    <label for="input_sentence">Enter a sentence</label>
-    <input id="input_sentence" type="text" name="input_sentence" class="form-control">
-    <label for="input_word">Enter the word that you want to count</label>
-    <input id="input_word" type="text" name="input_word" class="form-control">
+    <label for="sentence">Enter a sentence</label>
+    <input id="sentence" type="text" name="input_sentence" class="form-control">
+    <label for="word">Enter the word that you want to count</label>
+    <input id="word" type="text" name="input_word" class="form-control">
   </div>
-  <button type="submit" class="btn-success">Submit</button>
+  <button type="submit" class="btn btn-success">Submit</button>
 </form>
+
+<h2>The sentence "<%= @original_sentence %>"</h2>
+<h2>Contains the word "<%= @original_word %>"</h2>
+<h2><%= @final_count %>time(s)</h2>
