--- a/views/index.erb
+++ b/views/index.erb
@@ -1,14 +1,18 @@
+
+<div id="top">
 <h1>Word Count</h1>
+</div>
+
+<div id="main" class="well">
 <form action="result">
   <div class="form-group">
-    <label for="sentence">Enter a sentence</label>
-    <input id="sentence" type="text" name="input_sentence" class="form-control">
-    <label for="word">Enter the word that you want to count</label>
-    <input id="word" type="text" name="input_word" class="form-control">
+    <input id="sentence" type="text" name="input_sentence" class="form-control" placeholder="Enter a sentence">
+    <input id="word" type="text" name="input_word" class="form-control" placeholder="Enter the word that you want to count">
   </div>
-  <button type="submit" class="btn btn-success">Submit</button>
+  <button type="submit" class="btn btn-success">Go</button>
 </form>
+</div> <!--main end -->
 
 <h2>The sentence "<%= @original_sentence %>"</h2>
 <h2>Contains the word "<%= @original_word %>"</h2>
-<h2><%= @final_count %>time(s)</h2>
+<h2><%= @final_count %> time(s)</h2>
