--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <link rel="stylesheet" href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css' >
+    <link rel="stylesheet" href='/styles.css'>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <title>Word Count</title>
   </head>
   <body>
