moved examples to correct location

--- a/public/styles_blue.css
+++ b/public/styles_blue.css
@@ -29,9 +29,11 @@ body {
   border-radius: 10px 10px 10px;
   margin-bottom: 15px;
 }
-p {
+#main p {
   color: #999;
   font-style: italic;
+  margin-top: 10px;
+  margin-left: 10px;
 }
 h1, h2 {
   color: #fff;
@@ -61,7 +63,7 @@ input:hover {
      border-color:#0C99B9;
 }
 .form-group {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 /*Alters Focus on button and input*/
 button:focus{
