--- a/views/index.erb
+++ b/views/index.erb
@@ -6,9 +6,10 @@
   <form action="result">
     <div class="form-group">
       <input id="sentence" type="text" name="input_sentence" class="form-control" placeholder="Enter a sentence">
+      <p>Example: The Wolf turned into a werewolf.</p>
       <input id="word" type="text" name="input_word" class="form-control" placeholder="Enter the word that you want to count">
+      <p>Example: wolf</p>
     </div>
-    <p>Example: The Wolf turned into a werewolf.</p>
     <button type="submit" class="btn btn-success">Go</button>
   </form>
 </div> <!--main end -->
